[gd_scene load_steps=11 format=3 uid="uid://bjbuvwxageuvj"]

[ext_resource type="Script" path="res://UI/spell_select_panel.gd" id="1_ycaer"]
[ext_resource type="Resource" uid="uid://c1l7m1h5hh5it" path="res://Spell Effects/Spells/TestDeck.tres" id="2_ye5we"]
[ext_resource type="Texture2D" uid="uid://c5dch0g6bpaqn" path="res://Art/Left_Arrow_Grey.png" id="3_k3g24"]
[ext_resource type="Resource" uid="uid://c2xrqueoa6vn6" path="res://Spell Effects/Spells/Test Spells/Test Spell.tres" id="3_unf5x"]
[ext_resource type="Texture2D" uid="uid://c21pavn462u0d" path="res://Art/Left_Arrow_Gold.png" id="4_bbxbo"]
[ext_resource type="PackedScene" uid="uid://hegpr51wga6o" path="res://UI/Spell_Option.tscn" id="4_bfxi6"]
[ext_resource type="Texture2D" uid="uid://b5v5ktkedluv5" path="res://Art/Right_Arrow_Grey.png" id="6_vsqpe"]
[ext_resource type="Texture2D" uid="uid://cal31supdsnww" path="res://Art/Right_Arrow_Gold.png" id="7_2t8ho"]

[sub_resource type="Animation" id="Animation_uvfwg"]
resource_name = "Animate Join Sprite"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j2eua"]
_data = {
"Animate Join Sprite": SubResource("Animation_uvfwg")
}

[node name="Spell Select" type="PanelContainer"]
clip_contents = true
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"Panel2"
script = ExtResource("1_ycaer")
spells = ExtResource("2_ye5we")
left_spell = ExtResource("3_unf5x")
center_spell = ExtResource("3_unf5x")
right_spell = ExtResource("3_unf5x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_j2eua")
}

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LeftButton" type="TextureButton" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_k3g24")
texture_pressed = ExtResource("4_bbxbo")
texture_hover = ExtResource("4_bbxbo")
texture_disabled = ExtResource("3_k3g24")
texture_focused = ExtResource("4_bbxbo")

[node name="LeftSpell" parent="HBoxContainer2" instance=ExtResource("4_bfxi6")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2

[node name="CenterSpell" parent="HBoxContainer2/VBoxContainer" instance=ExtResource("4_bfxi6")]
unique_name_in_owner = true
layout_mode = 2

[node name="SelectButton" type="Button" parent="HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Select"

[node name="RightSpell" parent="HBoxContainer2" instance=ExtResource("4_bfxi6")]
unique_name_in_owner = true
layout_mode = 2

[node name="RightButton" type="TextureButton" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_vsqpe")
texture_pressed = ExtResource("7_2t8ho")
texture_hover = ExtResource("7_2t8ho")
texture_disabled = ExtResource("6_vsqpe")
texture_focused = ExtResource("7_2t8ho")
